fixed collapse controls. fixed width of sidebar elements when collapsed.

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,3 +1,22 @@
+#container-components {
+  display: flex;
+  overflow: hidden;
+  height: 100vh;
+  margin-top: -100px;
+  padding-top: 100px;
+  position: relative;
+  backface-visibility: hidden;
+  will-change: overflow;
+}
+#components {
+  overflow: auto;
+  width: 100%;
+}
+#components::-webkit-scrollbar {
+  display: none;
+}
+
+
 .filterable {
     margin-top: 15px;
 }
